--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="reset">巡检状态重置</string>
     <string name="see_scan">查看巡检到的Beacons</string>
     <string name="login_preference_name">login_preference</string>
+    <string name="check_login_preference">check_login_preference</string>
     <string name="unupload_dbname">unupload.db</string>
     <string name="create_unupload_beacon_table">create table if not exists unupbeacon
 	    (mac_id text,uuid text, rssi text,  major  text,   minor  text,latitude text, longitude text);
