--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,6 @@
     </string>
     <string name="create_beacon_location_table">
         create table if not exists beacon_location
-	    (mac_id text,rssi text,latitude text, longitude text);
+	    (mac_id text,rssi text,latitude text, longitude text,date text);
     </string>
 </resources>
